kubernetes/deploy/ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  labels:
    name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://app.cubenchere.xyz"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-headers: "x-signalr-user-agent, x-requested-with, Content-Type, Authorization, Accept, Origin, User-Agent, Access-Control-Allow-Headers, Access-Control-Allow-Origin, Access-Control-Allow-Methods"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - app.cubenchere.xyz
        - api.cubenchere.xyz
      secretName: cube-tls
  rules:
    - host: app.cubenchere.xyz
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: webapp-clusterip
                port:
                  number: 3000
    - host: api.cubenchere.xyz
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: gateway-clusterip
                port:
                  number: 80
